Project

General

Profile

Actions

Bug #53252

closed

compiler warning, enumeration value ‘AMQP_STATUS_SSL_SET_ENGINE_FAILED’ not handled in switch

Added by Casey Bodley over 2 years ago. Updated over 1 year ago.

Status:
Resolved
Priority:
Normal
Target version:
-
% Done:

100%

Source:
Tags:
Backport:
octopus pacific
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

Building CXX object src/rgw/CMakeFiles/rgw_common.dir/rgw_amqp.cc.o
/home/cbodley/ceph/src/rgw/rgw_amqp.cc: In function ‘std::string rgw::amqp::to_string(amqp_status_enum)’:
/home/cbodley/ceph/src/rgw/rgw_amqp.cc:262:10: warning: enumeration value ‘AMQP_STATUS_SSL_SET_ENGINE_FAILED’ not handled in switch [-Wswitch]
  262 |   switch (s) {
      |          ^

Related issues 2 (0 open2 closed)

Copied to rgw - Backport #53639: pacific: compiler warning, enumeration value ‘AMQP_STATUS_SSL_SET_ENGINE_FAILED’ not handled in switchResolvedCory SnyderActions
Copied to rgw - Backport #53640: octopus: compiler warning, enumeration value ‘AMQP_STATUS_SSL_SET_ENGINE_FAILED’ not handled in switchResolvedCory SnyderActions
Actions #1

Updated by Casey Bodley over 2 years ago

  • Status changed from New to Fix Under Review
  • Pull request ID set to 44323
Actions #2

Updated by Casey Bodley over 2 years ago

  • Status changed from Fix Under Review to Pending Backport
  • Backport set to octopus pacific
Actions #3

Updated by Backport Bot over 2 years ago

  • Copied to Backport #53639: pacific: compiler warning, enumeration value ‘AMQP_STATUS_SSL_SET_ENGINE_FAILED’ not handled in switch added
Actions #4

Updated by Backport Bot over 2 years ago

  • Copied to Backport #53640: octopus: compiler warning, enumeration value ‘AMQP_STATUS_SSL_SET_ENGINE_FAILED’ not handled in switch added
Actions #5

Updated by Backport Bot over 1 year ago

  • Tags set to backport_processed
Actions #6

Updated by Konstantin Shalygin over 1 year ago

  • Status changed from Pending Backport to Resolved
  • % Done changed from 0 to 100
  • Tags deleted (backport_processed)
Actions

Also available in: Atom PDF