rgw: fix rabbitmq version checking for AMQP_STATUS_SSL_SET_ENGINE_FAILED

This commit adds the librabbitmq-c version checking for ensuring that the new case for the switch is only added in the corresponding rabbitmq versions.
Fixes: http://tracker.ceph.com/issues/53252
Signed-off-by: Francisco J. Solis <siscomagma@gmail.com>